--- a/eda.ipynb
+++ b/eda.ipynb
@@ -31,7 +31,8 @@
     "        break\n",
     "    text.append(line)\n",
     "    temp+=1\n",
-    "text = np.asarray(text)"
+    "text = np.asarray(text)\n",
+    "print()"
    ],
    "outputs": [],
    "metadata": {}
