Isolated decoding process to its own script rather than being part of main.py

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -9,37 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
-    "import matplotlib as plt\n"
+    "import matplotlib as plt\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "source": [
     "# Total Data Length = 150,000 sequence pairs (per data source)\n",
-    "path = '../../../Datasets/fra.txt' \n",
-    "text,temp = [],1\n",
+    "path = '../../../Datasets/fra.txt'\n",
+    "temp,text=0,[]\n",
     "for line in open(path,mode='r',encoding='utf-8'):\n",
     "    if temp>5000:\n",
     "        break\n",
     "    text.append(line)\n",
     "    temp+=1\n",
-    "text = np.asarray(text)\n",
-    "print()"
+    "text = np.asarray(text)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
     "print('Text Shape:{}'.format(text.shape))\n",
     "print('Text Subset:\\n{}'.format(text[:10]))"
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Text Shape:(5000,)\n",
+      "Text Shape:(5001,)\n",
       "Text Subset:\n",
       "['Go.\\tVa !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #1158250 (Wittydev)\\n'\n",
       " 'Go.\\tMarche.\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #8090732 (Micsmithel)\\n'\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "source": [
     "# Test Cleaner\n",
     "seq = text[0].split('\\t')\n",
@@ -98,6 +98,84 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "source": [
+    "st = 'cool this is a new sentence with this more than one word and it is'\n",
+    "st2 = 'new sentences with new words and interesting effects'\n",
+    "st = st.lower().split(' ')\n",
+    "st2 = st2.lower().split(' ')\n",
+    "a = [st,st2]\n",
+    "tk = Tokenizer()\n",
+    "tk.fit_on_texts(a)\n",
+    "tk.word_index"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'new': 1,\n",
+       " 'this': 2,\n",
+       " 'is': 3,\n",
+       " 'with': 4,\n",
+       " 'and': 5,\n",
+       " 'cool': 6,\n",
+       " 'a': 7,\n",
+       " 'sentence': 8,\n",
+       " 'more': 9,\n",
+       " 'than': 10,\n",
+       " 'one': 11,\n",
+       " 'word': 12,\n",
+       " 'it': 13,\n",
+       " 'sentences': 14,\n",
+       " 'words': 15,\n",
+       " 'interesting': 16,\n",
+       " 'effects': 17}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "source": [
+    "tk.texts_to_sequences(a)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[[6, 2, 3, 7, 1, 8, 4, 2, 9, 10, 11, 12, 5, 13, 3],\n",
+       " [1, 14, 4, 1, 15, 5, 16, 17]]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
