--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1,126 +1,156 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# fra.txt Data Analysis"
-   ],
-   "metadata": {}
+    "# Sequence Data Analysis"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
     "import matplotlib as plt"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Total Data Length = 150,000 sequence pairs (per data source)\n",
-    "path = '../../../Datasets/fra.txt' \n",
-    "text,temp = [],1\n",
-    "for line in open(path,mode='r',encoding='utf-8'):\n",
-    "    if temp>5000:\n",
-    "        break\n",
-    "    text.append(line)\n",
-    "    temp+=1\n",
-    "text = np.asarray(text)\n",
-    "print()"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "def load_data(path:str):\n",
+    "    text = []\n",
+    "    with open(path,mode='r',encoding='utf-8') as txt_file:\n",
+    "        for i,line in enumerate(txt_file):\n",
+    "            text.append(line)\n",
+    "            if i>100:\n",
+    "                break\n",
+    "    return np.asarray(text)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "print('Text Shape:{}'.format(text.shape))\n",
-    "print('Text Subset:\\n{}'.format(text[:10]))"
-   ],
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Text Shape:(5000,)\n",
+      "Text Shape:(102,)\n",
       "Text Subset:\n",
       "['Go.\\tVa !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #1158250 (Wittydev)\\n'\n",
       " 'Go.\\tMarche.\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #8090732 (Micsmithel)\\n'\n",
+      " 'Go.\\tEn route !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #8267435 (felix63)\\n'\n",
       " 'Go.\\tBouge !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #2877272 (CM) & #9022935 (Micsmithel)\\n'\n",
       " 'Hi.\\tSalut !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #509819 (Aiji)\\n'\n",
       " 'Hi.\\tSalut.\\tCC-BY 2.0 (France) Attribution: tatoeba.org #538123 (CM) & #4320462 (gillux)\\n'\n",
       " 'Run!\\tCours\\u202f!\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #906331 (sacredceltic)\\n'\n",
       " 'Run!\\tCourez\\u202f!\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #906332 (sacredceltic)\\n'\n",
       " 'Run!\\tPrenez vos jambes à vos cous !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #2077449 (sacredceltic)\\n'\n",
-      " 'Run!\\tFile !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #2077454 (sacredceltic)\\n'\n",
-      " 'Run!\\tFilez !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #2077455 (sacredceltic)\\n']\n"
+      " 'Run!\\tFile !\\tCC-BY 2.0 (France) Attribution: tatoeba.org #906328 (papabear) & #2077454 (sacredceltic)\\n']\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "data = load_data('fra.txt')\n",
+    "print('Text Shape:{}'.format(data.shape))\n",
+    "print('Text Subset:\\n{}'.format(data[:10]))"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Observations\n",
-    "1. Data is 150,000 in length, likely don't want to use all of it, for time & computational purposes (i.e. could take very long to train the model locally)\n",
+    "1. Data is 150,000 in length, likely don't want to use all of it, for time & computational purposes\n",
     "2. Data is structured in pairs of sequences separated by tabs (\\t)\n",
-    "3. Data has punctuation (.,!,etc.), needs to be removed bc the model doesn't like special characters\n",
+    "3. Data has punctuation (.,!,etc.), needs to be removed because the model doesn't like special characters\n",
     "4. Data should be lower cased for similar reasons\n",
     "5. We only need the Fre-Eng sequences so we can get rid of any other data"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "# Test Cleaner\n",
-    "seq = text[0].split('\\t')\n",
-    "seq = '|'.join(seq[:1] + seq[1:2])\n",
-    "seq = re.sub(r\"[^a-zA-Z|]\",'',seq)\n",
-    "seq = seq.lower().split('|')\n",
-    "print(seq)"
-   ],
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "['go', 'va']\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Test Cleaner (V1)\n",
+    "seq = text[0].split('\\t')\n",
+    "seq = '|'.join(seq[:1] + seq[1:2])\n",
+    "seq = re.sub(r\"[^a-zA-Z|]\",'',seq)\n",
+    "seq = seq.lower().split('|')\n",
+    "print(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['go', 'va']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alternative: Avoids joining and re-splitting string by special character\n",
+    "seq = text[0].strip().split('\\t')\n",
+    "eng = re.sub(r\"[^a-zA-Z]\",'',seq[0])\n",
+    "fre = re.sub(r\"[^a-zA-Z]\",'',seq[1])\n",
+    "seq = [eng.lower(),fre.lower()]\n",
+    "seq"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "kernelspec": {
+   "display_name": "nmt_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('nmt_model': conda)"
-  },
-  "interpreter": {
-   "hash": "7ff15d897114af843c8c9d910afb9c6fa674e4533f8e5548b1d50ec16e6cd528"
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "24d73fafa7411f345213dba5bf7fc6bd077db64df13d94ce657c5bc7aed332c1"
+   }
   }
  },
  "nbformat": 4,
