--- a/eda.ipynb
+++ b/eda.ipynb
@@ -14,10 +14,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
-    "import matplotlib as plt"
+    "from file import EncodeSequences\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = EncodeSequences('fra.txt')\n",
+    "text = obj.load_text()\n",
+    "train,test = train_test_split(text,test_size=.15,random_state=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_lang_lengths,out_lang_lengths = obj._get_sentence_lengths(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(out_lang_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dD DDkjkj'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'dD DD'+ 'kjkj'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['go', 'va'],\n",
+       "       ['go', 'marche'],\n",
+       "       ['go', 'en route'],\n",
+       "       ...,\n",
+       "       ['i need to keep moving', 'je dois continuer  avancer'],\n",
+       "       ['i need to make a copy', 'je dois faire une copie'],\n",
+       "       ['i need to make my bed', 'il faut que je fasse mon lit']],\n",
+       "      dtype='<U68')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['drink more water', 'bois davantage deau'],\n",
+       "       ['theyre boys', 'ce sont des garons'],\n",
+       "       ['youre not safe here', 'vous ntes pas en scurit ici'],\n",
+       "       ...,\n",
+       "       ['i liked your story', 'jai bien aim ton histoire'],\n",
+       "       ['i like swimming', 'jaime nager'],\n",
+       "       ['come alone', 'viens seul']], dtype='<U68')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   },
   {
@@ -144,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
